fix resource packaging and small fixes